<resources>
    <string name="app_name">Notification Detox</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Tab Titles -->
    <string name="tab_name_0">Overview</string>
    <string name="tab_name_1">Rules</string>
    <string name="tab_name_2">Snoozed</string>


    <!-- DetailsActivity Text -->
    <string name="selected_ruletype">Selected ruletype</string>
    <string name="selected_applcication">Selected application</string>
    <string name="description">Description:</string>
    <string name="configuration">Configurations</string>
    <string name="tab_to_flip">Tab to flip</string>
    <string name="remaining">Remaining notifications</string>
    <string name="Breaktime">Break-Time</string>
    <string name="colon">:</string>
    <string name="default_countdown">00:00</string>
    <string name="remaining_time">Remaining-Time</string>
    <string name="tab_for_weekdays">Tab for weekdays</string>

    <!-- Toolbar Titles -->
    <string name="rule_details_toolbar_title">Details of your rule</string>
    <string name="notifications_detail_title">Notifications</string>
    <string name="menu_today">today</string>
    <string name="menu_weeky">this week</string>
    <string name="menu_month">this month</string>
    <string name="menu_select_time">Select Time</string>


    <!-- Image Descriptions -->
    <string name="app_image_notification">Image of app</string>
    <string name="rule_image_content_description">Image of app</string>
    <string name="app_image_content_description">Image of ruletype</string>


    <string name="app_title_defualt">Applications Name</string>
    <string name="app_notifications_received">Received today: </string>
    <string name="app_notifications_average">Average per week: </string>

    <string name="app_notifications_average_adapter">Average per week: %1$d</string>
    <string name="app_notifications_received_adapter">Received today %1$d</string>

    <string name="permission_request_text">In order for this application to work properly we need permissions to access your notifications</string>
    <string name="go_to_settings">Go to settings</string>

    <!-- Rule Wizard Section -->

    <string name="date">10.10.20</string>
    <string name="week">week</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="Hour">Hour</string>
    <string name="hours">hours</string>
    <string name="weekReview">Limit per week</string>
    <string name="dayReview">Limit per day</string>
    <string name="hourReview">Limit per hour</string>
    <string name="per">per</string>
    <string name="minute">minute</string>
    <string name="Minute">Minute</string>
    <string name="minutes">minutes</string>
    <string name="startAt">Start at:</string>
    <string name="endAt">End at:</string>
    <string name="rule">Rule</string>
    <string name="apps">Apps</string>
    <string name="options1">Options 1</string>
    <string name="options2">Options 2</string>
    <string name="default_text">defualt text</string>
    <string name="duration">Duration</string>
    <string name="outdated">Outdated</string>
    <string name="delete">Delete</string>
    <string name="choose_one_or_more">Choose one or more</string>

    <!-- Navigation Button for rule creation-->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create">Create</string>
    <string name="ruletype">Ruletyp here</string>


    <!-- timeslot-string -->
    <string name="rule_timeslot_for_this_minute">for this minute</string>
    <string name="rule_timeslot_for_this_hour">for this hour</string>
    <string name="rule_timeslot_for_this_day">for this day</string>
    <string name="rule_timeslot_for_this_week">for this week</string>
    <string name="rule_timeslot_none">none</string>


    <!-- Rule Wizard Titles-->
    <string name="rule_wizard_select_apps_title">Select one or more apps</string>
    <string name="rule_wizard_select_rule_title">Select the type of rule</string>
    <string name="rule_wizard_select_breaktime_title">For how long?</string>
    <string name="rule_wizard_select_number_title">How many are allowed?</string>
    <string name="rule_wizard_select_schedule_title">In which time period?</string>
    <string name="rule_wizard_review">Review</string>
    <string name="limitmode">Limitmode</string>
    <string name="number">Number</string>
    <string name="time">Time</string>
    <string name="weekdays">Days</string>
    <string name="notSelected">Not Selected</string>
    <string name="rule_wizard_weekday_number_title">Select weekdays</string>
    <string name="tab_for_time">Tab for time</string>
    <string name="menu_most">order by number</string>
    <string name="menu_name">order by app</string>
    <string name="tab_to_exit">Tab again to exit</string>


    <!-- Rule Wizard Rule Descriptions-->
    <string-array name="rule_descriptions">
        <item>Keep notifications away for some time. Notifications will be saved and re-sent afterwards.</item>
        <item>I don\'t want to receive notifications at specific times on specific days. Notifications will be saved and re-sent afterwards. </item>
        <item>Only allow me a few notifications. Notifications beyond the limit will be deleted! </item>
        <item>I don\'t want to receive notifications from this app anymore. Notifications will be deleted!</item>
    </string-array>

    <!-- Rule Wizard Rule Names-->
    <string-array name="rule_names">
        <item>Take a break</item>
        <item>Forbit at time</item>
        <item>Number of Notifications</item>
        <item>Suppress Notifications</item>
        <item>Not Selected</item>
    </string-array>

    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


</resources>
