<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ruleCreation.SelectAllowedNumberFragment">


    <TextView
        android:id="@+id/select_number_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rule_wizard_select_number_title"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/select_number_title_text_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="30dp">


        <RadioGroup
            android:id="@+id/select_number_radioGroup"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/per_text_view">

            <RadioButton
                android:id="@+id/day_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textSize="16sp"
                android:padding="5dp"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="185dp" />

            <RadioButton
                android:id="@+id/hour_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour"
                android:textSize="16sp"
                android:padding="5dp"
                tools:layout_editor_absoluteX="205dp"
                tools:layout_editor_absoluteY="254dp" />

            <RadioButton
                android:id="@+id/week_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week"
                android:textSize="16sp"
                android:padding="5dp"
                tools:layout_editor_absoluteX="205dp"
                tools:layout_editor_absoluteY="330dp" />

        </RadioGroup>

        <NumberPicker
            android:id="@+id/rule_details_allowed_number"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:layout_toStartOf="@id/per_text_view"
            android:gravity="center"
            android:scaleX="1.2"
            android:scaleY="1.2" />

        <TextView
            android:id="@+id/per_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/per"
            android:textSize="24sp" />


    </RelativeLayout>

</RelativeLayout>