<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notification_item"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_margin="3dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/notification_overview_image"
            android:layout_width="81dp"
            android:layout_height="81dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="298dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_image_notification"
            android:cropToPadding="true"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"/>

        <TextView
            android:id="@+id/notification_card_received_today"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="122dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="36dp"
            android:text="@string/app_notifications_received" />

        <TextView
            android:id="@+id/notification_card_title"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="122dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="69dp"
            android:text="@string/app_title_defualt"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notification_card_average"
            android:layout_width="290dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="121dp"
            android:layout_marginTop="73dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="9dp"
            android:text="@string/app_notifications_average" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>