<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/limitNumber_DetailsCard_Front"
    android:layout_margin="3dp"
    app:cardCornerRadius="10dp"
    android:padding="3dp"
    android:background="@color/white"
    tools:context=".fragments.detailsFragments.LimitNumberDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp">

        <RadioGroup
            android:id="@+id/select_number_radioGroup"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_toEndOf="@id/per_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/per_text_view"
            app:layout_constraintStart_toEndOf="@+id/per_text_view"
            app:layout_constraintTop_toTopOf="@+id/per_text_view">

            <RadioButton
                android:id="@+id/day_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/day"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="185dp" />

            <RadioButton
                android:id="@+id/hour_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/hour"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="205dp"
                tools:layout_editor_absoluteY="254dp" />

            <RadioButton
                android:id="@+id/week_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/week"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="205dp"
                tools:layout_editor_absoluteY="330dp" />

        </RadioGroup>

        <TextView
            android:id="@+id/per_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/per"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/rule_details_allowed_number"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="52dp"
            android:layout_toStartOf="@id/per_text_view"
            android:gravity="center"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:layout_constraintBottom_toBottomOf="@+id/per_text_view"
            app:layout_constraintEnd_toStartOf="@+id/per_text_view"
            app:layout_constraintTop_toTopOf="@+id/per_text_view"
            app:layout_constraintVertical_bias="0.503" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_to_flip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>