<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_margin="3dp"
    android:background="@color/white"
    android:padding="3dp"
    app:cardCornerRadius="10dp"
    tools:context=".fragments.detailsFragments.ShortBreakDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/minTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Minute"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/numberpicker_shortbreak_minute_rule"
            app:layout_constraintEnd_toEndOf="@+id/numberpicker_shortbreak_minute_rule"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="@+id/numberpicker_shortbreak_minute_rule"
            app:layout_constraintTop_toTopOf="@+id/numberpicker_shortbreak_minute_rule"
            app:layout_constraintVertical_bias="0.07999998" />

        <NumberPicker
            android:id="@+id/numberpicker_shortbreak_minute_rule"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:layout_constraintBottom_toBottomOf="@+id/center_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/center_text"
            app:layout_constraintTop_toTopOf="@+id/center_text" />


        <TextView
            android:id="@+id/hrsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hour"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/numberpicker_shortbreak_hour_rule"
            app:layout_constraintEnd_toEndOf="@+id/numberpicker_shortbreak_hour_rule"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="@+id/numberpicker_shortbreak_hour_rule"
            app:layout_constraintTop_toTopOf="@+id/numberpicker_shortbreak_hour_rule"
            app:layout_constraintVertical_bias="0.07999998" />

        <TextView
            android:id="@+id/center_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/colon"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <NumberPicker
            android:id="@+id/numberpicker_shortbreak_hour_rule"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:layout_constraintBottom_toBottomOf="@+id/center_text"
            app:layout_constraintEnd_toStartOf="@+id/center_text"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/center_text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/tab_to_flip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.059" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Breaktime"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/hrsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>